# elevation-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docs.py  main.py  pyproject.toml
.github/workflows/: deploy.yaml
attribution/: __init__.py  attributions.yaml
attributions/: __init__.py  attribution.md  attributions.yaml  model.py
dataset/: __init__.py  lookup.py  source.py
infra/: deployment.yaml  ingress.yaml  ns.yaml  service.yaml  serviceAccount.yaml  volume.yaml
nb/: attrib.ipynb  vis.ipynb
sample_data/: index.vrt  indian_peaks_cop90.tif  sample_10mi_track.json
src/: lib.rs  main.rs
test_samples/: cop90_sample.tif  merit_dem_fixed1.vrt  merit_dem_fixed1_sample.tif  os_terrain_50_fixed1_sample.tif
tests/: .env  profile.py
tools/: convert.sh  index.sh  optimize.sh  play.sh  sample.sh  smoke.py  smoke_large.py
