[package]
name = "elevation-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
eyre = "0.6.12"
gdal = "0.16.0"
gdal-sys = { version = "0.9.1", features = ["bindgen"] }
http = "1.1.0"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "json",
] }
