[tool.poetry]
name = "elevation-api"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
python-dotenv = "^1.0.1"
python-ulid = {extras = ["pydantic"], version = "^2.7.0"}
numpy = "^2.0.0"
geopandas = "^1.0.0"
shapely = "^2.0.4"
markdown = "^3.6"
rasterio = "^1.3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
requests = "^2.32.3"
folium = "^0.17.0"
mapclassify = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
