[tool.poetry]
name = "elevation-api"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi-slim = "^0.111.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
python-dotenv = "^1.0.1"
numpy = "^2.0.0"
markdown = "^3.6"
rasterio = "^1.3.10"
prometheus-client = "^0.20.0"
uvicorn = "^0.30.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
shapely = "^2.0.4"
geopandas = "^1.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
requests = "^2.32.3"
folium = "^0.17.0"
mapclassify = "^2.6.1"
fastapi-cli = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
